--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -2,8 +2,7 @@
     "cookieSecret": "some secret, seriously don't tell",
     "cookieMaxAge": 86400000,
     "github" : {
-        "clientId": "93df694dafdb3df46e2d",
-        "clientSecret": "499fa9bbe1f13e9fe537b6dda8551174e082f838"
+        "scope": "user, repo, gist, notifications"
     },
     "mongoDbIp": "localhost",
     "port": 8000,
