--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -2,7 +2,7 @@
     "cookieSecret": "some secret, seriously don't tell",
     "cookieMaxAge": 86400000,
     "github" : {
-        "scope": "user, repo, gist, notifications"
+        "scope": "user, repo, gist, notifications, user:email"
     },
     "mongoDbIp": "localhost",
     "port": 8000,
