Fix up issues with chat messages. Add enableTracking configuration for turning on and off tracking. Render new line characters correctly in chat messages.

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -1,6 +1,7 @@
 {
     "cookieSecret": "some secret, seriously don't tell",
     "cookieMaxAge": 86400000,
+    "enableTracking": true,
     "github" : {
         "scope": "user, repo, gist, notifications, user:email"
     },
