Fix model View issue rendering model. Add staticUrl support to endable edge support

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -7,5 +7,6 @@
     },
     "mongoDbIp": "localhost",
     "port": 8000,
-    "sessionKey": "'airbug.sid'"
+    "sessionKey": "'airbug.sid'",
+    "staticUrl": "http://localhost:8000"
 }
