--- a/projects/airbugserver/resources/config/prod-config.json
+++ b/projects/airbugserver/resources/config/prod-config.json
@@ -2,5 +2,6 @@
     "github": {
         "clientId": "93df694dafdb3df46e2d",
         "clientSecret": "499fa9bbe1f13e9fe537b6dda8551174e082f838"
-    }
+    },
+    "staticUrl": "https://d1jply0oquv2ju.cloudfront.net/airbug/0.0.1/static"
 }
