Add redis configurations for prod

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -7,6 +7,10 @@
     },
     "mongoDbIp": "localhost",
     "port": 8000,
+    "redis": {
+        "host": "127.0.0.1",
+        "port": 6379
+    },
     "sessionKey": "'airbug.sid'",
     "staticUrl": "http://localhost:8000"
 }
