Fix static path loading

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -12,5 +12,6 @@
         "port": 6379
     },
     "sessionKey": "'airbug.sid'",
-    "staticUrl": "http://localhost:8000"
+    "staticUrl": "/static",
+    "stickyStaticUrl": "/static"
 }
