zeroclipboard cannot cross between http and https. Protocol that we load swf from must match the domain swf. Allow for cross script access on different domains. Move the location where the swf file is located. [Finishes story #64769630]

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -12,6 +12,7 @@
         "port": 6379
     },
     "sessionKey": "'airbug.sid'",
+    "sslEnabled": false,
     "staticUrl": "/static",
     "stickyStaticUrl": "/static"
 }
