Adds user status indicators. Fixes a number of small issues throughout the code. Updates to match changes in bugcall. [Finishes story #64254234] [Finishes story #64254438] [Finishes story #64586836] [Finishes story #64268256]

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -5,6 +5,7 @@
     "github" : {
         "scope": "user, repo, gist, notifications, user:email"
     },
+    "googleAnalyticsId" : "",
     "mongoDbIp": "localhost",
     "port": 8000,
     "redis": {
