--- a/projects/airbugserver/resources/config/prod-config.json
+++ b/projects/airbugserver/resources/config/prod-config.json
@@ -3,10 +3,11 @@
         "clientId": "93df694dafdb3df46e2d",
         "clientSecret": "499fa9bbe1f13e9fe537b6dda8551174e082f838"
     },
+    "googleAnalyticsId": "UA-39328558-1",
     "redis": {
         "host": "redis-us-east-1a.ogttef.0001.use1.cache.amazonaws.com"
     },
     "sslEnabled": false,
-    "staticUrl": "//d1jply0oquv2ju.cloudfront.net/airbug/0.0.11/static",
+    "staticUrl": "//d1jply0oquv2ju.cloudfront.net/airbug/0.0.12/static",
     "mongoDbIp": "10.209.21.90"
 }
