Add config setup to Migration code. Improve chat messages container to only scroll when the user is already at the bottom of the container.

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -8,6 +8,7 @@
     "googleAnalyticsId" : "",
     "mongoDbIp": "localhost",
     "port": 8000,
+    "hostName": "localhost",
     "redis": {
         "host": "127.0.0.1",
         "port": 6379
