--- a/projects/airbugserver/resources/config/prod-config.json
+++ b/projects/airbugserver/resources/config/prod-config.json
@@ -7,7 +7,8 @@
     "redis": {
         "host": "redis-us-east-1a.ogttef.0001.use1.cache.amazonaws.com"
     },
+    "hostName": "airbug.com",
     "sslEnabled": false,
-    "staticUrl": "//d1jply0oquv2ju.cloudfront.net/airbug/0.0.12/static",
+    "staticUrl": "//d1jply0oquv2ju.cloudfront.net/airbug/0.0.13/static",
     "mongoDbIp": "10.209.21.90"
 }
