New. Adds the creation of signups to the registration process. Adds a migration to add beta keys to existing users. Adds a migration to add signups for existing users. Updates files to support signups and migrations. [story #65828266]

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -1,4 +1,5 @@
 {
+    "appVersion": "{{BUILD_VERSION}}",
     "cookieSecret": "some secret, seriously don't tell",
     "cookieMaxAge": 86400000,
     "enableTracking": true,
