Update to match new bugpack loading in start scripts. Add new debug config for loading files individually or minimized. Fix minor tweaks in styling of some ui elements.

--- a/projects/airbugserver/resources/config/config.json
+++ b/projects/airbugserver/resources/config/config.json
@@ -3,6 +3,7 @@
     "cookieDomain": "",
     "cookieSecret": "some secret, seriously don't tell",
     "cookieMaxAge": 86400000,
+    "debug": true,
     "enableTracking": true,
     "github" : {
         "scope": "user, repo, gist, notifications, user:email"
