--- a/projects/airbugserver/resources/config/prod-config.json
+++ b/projects/airbugserver/resources/config/prod-config.json
@@ -1,5 +1,6 @@
 {
     "cookieDomain": ".airbug.com",
+    "debug": false,
     "github": {
         "clientId": "93df694dafdb3df46e2d",
         "clientSecret": "499fa9bbe1f13e9fe537b6dda8551174e082f838"
