--- a/projects/airbugserver/resources/config/prod-config.json
+++ b/projects/airbugserver/resources/config/prod-config.json
@@ -1,7 +1,4 @@
 {
-    "client": {
-        "staticUrl": "//d1jply0oquv2ju.cloudfront.net/airbug/{{BUILD_VERSION}}/static/client"
-    },
     "cookieDomain": ".airbug.com",
     "debug": false,
     "github": {
@@ -15,11 +12,9 @@
         "minify" : true
     },
     "mongoDbIp": "10.209.21.90",
-    "plugin": {
-        "staticUrl": "//d1jply0oquv2ju.cloudfront.net/airbug/{{BUILD_VERSION}}/static/plugin"
-    },
     "redis": {
         "host": "redis-us-east-1a.ogttef.0001.use1.cache.amazonaws.com"
     },
-    "sslEnabled": false
+    "sslEnabled": false,
+    "staticUrl": "//d1jply0oquv2ju.cloudfront.net/airbug/{{BUILD_VERSION}}/static"
 }
